--- a/profilePage/ProfilePageStyle.css
+++ b/profilePage/ProfilePageStyle.css
@@ -99,7 +99,7 @@ body {
 }
 
 .postContainer {
-    margin-top: 100px;
+    margin-top: 120px;
     margin-left: 20px;
     margin-right: 20px;
     display: block;
@@ -182,7 +182,7 @@ body {
 
 .tabContainer {
     margin-top: 60px;
-    position: relative;
+    position: absolute;
     width: 178px;
     left: 50%;
     margin-left: -89px;
@@ -208,16 +208,44 @@ body {
 }
 
 .tab button.active {
-    background-color: #ccc;
+    color: black;
 }
 
 .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
     border-top: none;
+    animation: fadeEffect 1s;
 }
 
 .tabText {
     font-size: 16px;
+}
+
+.homestayContainer {
+    margin-top: 120px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: block;
+    background-color: gray;
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.addressContainer {
+    width: 500px;
+    height: 200px;
+    display: block;
+    left: 50%;
+    margin-left: -250px;
+    position: absolute;
+}
+
+.addressImage {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
