--- a/profilePage/ProfilePageStyle.css
+++ b/profilePage/ProfilePageStyle.css
@@ -235,7 +235,7 @@ body {
     to {opacity: 1;}
 }
 
-.addressContainer {
+.homestayInfoContainer {
     width: 60%;
     height: 200px;
     display: block;
@@ -250,4 +250,44 @@ body {
     object-fit: cover;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.accessibilityContainer {
+    width: 100%;
+    height: 50px;
+    position: relative;
+    left: 50%;
+    margin-left: -150px;
+}
+
+.accessibilityContainer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 300px;
+}
+
+.accessibilityContainer li{
+    margin-left: 20px;
+    margin-right: 20px;
+    object-fit: cover;
+    display: inline;
+}
+
+.accessibilityPics {
+    width: 30px;
+    height: 30px;
+}
+
+.description {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #B5B5B5;
+    text-align: center;
+    font-size: 13px;
+}
+
+.accessibilityDetail {
+    color: #25374f;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
