--- a/MainPage.css
+++ b/MainPage.css
@@ -4,77 +4,20 @@
 
 
 body{
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin-top: 0px;
 	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 }
 
 
-#HeaderText, #NavBar, .UserPostButtonDiv{
+#HeaderText, .UserPostButtonDiv{
 	display: inline-block;
 }
 
 /* Application background color */
 #FluffyApplication{
+	margin-left: 5vw;
+	margin-right: 5vw;
 	background-color: #f8f8f8;
-}
-
-#UserPageHeader{
-	background-color: #f8f8f8;
-	height: 80px;
-	max-height: 80px;
-}
-
-#HeaderText {
-	color: #243650;
-	font-size: 250%;
-	font-family: 'Crete Round';
-	font-weight: bold;
-	margin-left: 50px;
-	padding-top: 5px;
-}
-
-/* NavBar CSS */
-#NavBar{
-	margin-left: 60px;
-}
-
-.DropDownMenu{
-	position: relative;
-	display: inline-block;
-
-	margin-right: 30px;
-	
-	font-size: 150%;
-	font-family: 'Comic Sans MS';
-}
-
-.DropDownTitle{
-}
-
-.DropDownMenuContent{
-	display: none;
-	position: absolute;
-	z-index: 1;
-	background-color: #f8f8f8;
-}
-
-.DropDownItem{
-	text-decoration:none;
-	min-width: 100px;
-	max-width: 200px;
-}
-
-.DropDownItem a:hover{
-	color: yellow;
-}
-
-.DropDownItem a{
-	text-decoration:none;
-}
-
-.DropDownMenu:hover .DropDownMenuContent{
-	display: block;
 }
 
 /* User Post Button */
@@ -149,23 +92,22 @@ body{
 
 /* User postings */
 #UserPostings{
+	width: 100%;
 	margin-top: 40px;
 }
 
 #UserPostingsTable{
-	margin: auto;
 	border-collapse: separate;
-	border-spacing: 30px 15px;
+	border-spacing: 3px 1px;
 }
 
 .Posting{
-	height: 250px;
-	width: 320px;
+	height: 100%;
+	width: 20%;
 }
 
 .PostingImage{
 	height: 180px;
-	width: inherit;
 }
 
 .PostingImage img{
@@ -175,7 +117,6 @@ body{
 
 .PostingTitle{
 	height: 70px;
-	width: inherit;
 
 	padding-top: 3px;
 	text-align: center;
