--- a/postModal.css
+++ b/postModal.css
@@ -1,55 +1,84 @@
+.rounded .rounded-left{
+	border-radius: 45%;
+	display: inline-block;
+}
+
+.rounded .rounded-right{
+	border-radius: 45%;
+	display: inline-block;
+}
+
 #MakePostModal{
 	display: none;
 	position: fixed;
-	z-index: 1;
+	z-index: 100;
 	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 100%;
 
-	background-color: rgba(248,248,248,0.8);
+	background-color: rgba(0,0,0,0.7);
 }
 
 #MakePostModal-Container{
 	height: 45vh;
 	width: 45vw;
+
+	min-height: 400px;
+	min-width: 622px;
+
 	margin-top: 27.5vh;
 	margin-left: 27.5vw;
+	background-color: #f9f9f9;
+	border-radius: 2.5%;
+	overflow: hidden;
 }
 
 #MakePostModal-Picture{
-	opacity: 100;
-	height: 75%;
+	height: 70%;
 	background-color: #bdbec0;
 	border: 1px solid #9e9e9e;
-	border-radius: 5%;
+	border-radius: 2.5%;
+}
+
+#MakePostModal-Picture .AddFilePic{
+	/*height: 25%;
+	position: relative;
+	top: 37.5%;
+	left: 37.5%;*/
+	margin: auto;
 }
 
 #MakePostModal-PostTitle{
-	padding-top: 2.5%;
+	margin-top: 2.5%;
 	height: 10%;
-	background-color:white;
 }
 
-.circle{
+#MakePostModal-PostTitle .circle{
 	display: inline-block;
-	height: 50px;
-	width: 50px;
-	border-radius: 45%;
-	background-color: #bdbec0;
+	height: 100%;
+	margin-left: 40px;
 }
+
 
 #MakePostModal-PostTitle input{
-	border-width: 0px;
+	position: relative;
+	bottom: 35%;
 	margin-left: 10px;
-	height: 70%;
+	padding-left: 4px;
+	height: 100%;
 	width: 70%;
+
+	border-width: 0px;
+	border-radius: 5%;
 }
 
 #MakePostModal-Container .UserPostButtonDiv{
+	margin-top: 2%;
 	margin-left: 35%;
-	margin-top: 20px;
-	background-color: rgba(248,248,248);
+	background-color: #bdbec0;
+	color: white;
+	font-weight: bold;
 }
 
 
