--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,5 +1,3 @@
-
-
 /* font */
 body {
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
@@ -28,13 +26,13 @@ body {
 	color: #5F9EA0;
 }
 
- #navBar ul {
+#header .container ul {
 	list-style: none;
 	padding: 7px;
 	width: 100%;
 }
 
- #navBar ul li {
+#header .container ul li {
 	display: inline-block;
 	font-size: 80%;
 }
