--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -66,7 +66,7 @@ body {
 	position: absolute;
 	width: 25px;
 	height: 25px;
-	background: url(./searchIcon.png) no-repeat;
+	background: url(../Image/searchIcon.png) no-repeat;
 	background-size: 100%;
 	border: none;
 	cursor: pointer;
