--- a/profile_edit_page/profile_edit.css
+++ b/profile_edit_page/profile_edit.css
@@ -38,7 +38,7 @@ a {
 
 	max-width: 1440px;
 
-	padding-left: 95px;
+	padding-left: 15px;*/
 
 	padding-right: 95px;
 
@@ -65,7 +65,7 @@ a {
 }
 
 
- ul {
+ #header .container ul {
 
 	list-style: none;
 
@@ -77,7 +77,7 @@ a {
 
 
 
- ul li {
+ #header .container ul li {
 
 	display: inline-block;
 
