--- a/view/HomestayUserProfilePage.html
+++ b/view/HomestayUserProfilePage.html
@@ -34,7 +34,7 @@
     </div>
     
     <div id="regularNameCard">
-        <button type="button" class="editButton"></button>
+        <button type="button" class="editButton"><a href="./profile_edit.html"></a></button>
         <div id="profileImage">
             <img class="profileImageRatio" src="regularUserProfileImage.png">
         </div>
