--- a/view/MainPage.html
+++ b/view/MainPage.html
@@ -40,7 +40,7 @@
 								<a class="navButton" href="">HOME</a>
 							</li>
 							<li>
-								<a class="navButton" href="">ACCOUNT</a>
+								<a class="navButton" href="./HomestayUserProfilePage.html">ACCOUNT</a>
 							</li>
 							<li>
 								<a class="navButton" href="">CONTACT US</a>
