--- a/view/login.html
+++ b/view/login.html
@@ -75,7 +75,7 @@
 
         <li class="infoDetail">
           <span style=" font-size:1%; margin-left: 80px;" class="infoText">Already have an account?</span>
-          <button id="loginButton">Log in</button>
+          <button id="loginButton"><a href="./MainPage.html"> Log in</a></button>
         </li>
 			</ul>
 
