--- a/view/profile_edit.html
+++ b/view/profile_edit.html
@@ -165,7 +165,7 @@
 
 	<div id="saveButton">
 
-		<button id="saveText" type="submit">Save</button>
+		<button id="saveText" type="submit"><a href="./HomestayUserProfilePage.html">Save</a></button>
 
 	</div>
 	<script type="text/javascript" src="./profile_edit.js"></script>
