--- a/view/RegularUserProfilePage.html
+++ b/view/RegularUserProfilePage.html
@@ -35,7 +35,7 @@
     </div>
     <!-- Name Card -->
     <div id="regularNameCard">
-        <button type="button" class="editButton"></button>
+        <button type="button" class="editButton"><a href="./profile_edit.html"></a></button>
         <div id="profileImage">
             <img class="profileImageRatio" src="regularUserProfileImage.png">
         </div>
