--- a/stylesheet/ProfilePageStyle.css
+++ b/stylesheet/ProfilePageStyle.css
@@ -128,7 +128,7 @@ body {
     margin-right: 70px;
     margin-top: 75px;
     clear: right;
-    background: url(pencil-2.png) no-repeat;
+    background: url(../Image/pencil-2.png) no-repeat;
     background-size: 100%;
     border: none;
     outline: none;
