--- a/view/MainPage.html
+++ b/view/MainPage.html
@@ -37,7 +37,7 @@
 						<div id="brand">Fluffy</div>
 						<ul>
 							<li>
-								<a class="navButton" href="">HOME</a>
+								<a class="navButton" href="./MainPage.html">HOME</a>
 							</li>
 							<li>
 								<a class="navButton" href="./HomestayUserProfilePage.html">ACCOUNT</a>
@@ -47,9 +47,7 @@
 							</li>
 							<li class="searchForm">
 								<input id="searchButton" type="text" name="search" placeholder="Search..">
-								<button id="searchIcon" type="submit"></button>
-								<!--<input id="searchIcon" src="./searchIcon.png" type="image" name="submit"> -->
-							</li>
+								<button id="searchIcon" type="submit"></button>							</li>
 						</ul>
 					</div>
 				</div>
