--- a/view/RegularUserProfilePage.html
+++ b/view/RegularUserProfilePage.html
@@ -4,7 +4,7 @@
     <title>
       Fluffy
     </title>
-    <link rel="stylesheet" type="text/css" href="ProfilePageStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../stylesheet/ProfilePageStyle.css" />
     <link rel="stylesheet" type="text/css" href="../stylesheet/index.css" />
 </head>
   <body>
@@ -14,10 +14,10 @@
             <div id="brand">Fluffy</div>
             <ul>
                 <li>
-                    <a class="navButton" href="">HOME</a>
+                    <a class="navButton" href="./MainPage.html">HOME</a>
                 </li>
                 <li>
-                    <a class="navButton" href="">ACCOUNT</a>
+                    <a class="navButton" href="./RegularUserProfilePage.html">ACCOUNT</a>
                 </li>
                 <li>
                     <a class="navButton" href="">CONTACT US</a>
@@ -31,13 +31,13 @@
     </div>
     <!-- Background -->
     <div class="backgroundContainer">
-        <img id="backgroundImage" src="IMG_4537.jpg">
+        <img id="backgroundImage" src="../Image/IMG_4537.jpg">
     </div>
     <!-- Name Card -->
     <div id="regularNameCard">
-        <button type="button" class="editButton"><a href="./profile_edit.html"></a></button>
+            <a href="./profile_edit.html"><button type="button" class="editButton"></button></a>
         <div id="profileImage">
-            <img class="profileImageRatio" src="regularUserProfileImage.png">
+            <img class="profileImageRatio" src="../Image/regularUserProfileImage.png">
         </div>
         <center id="userName">User1</center>
     </div>
@@ -48,7 +48,7 @@
             <div class="column">
                 <div class="post">
                     <div class="postImageContainer">
-                        <img class="postImage" src="IMG_4537.jpg">
+                        <img class="postImage" src="../Image/IMG_4537.jpg">
                     </div>
                     <div class="postTextContainer">
                         <span class="postText">Cuteness here...</span>
