--- a/stylesheet/profile_edit.css
+++ b/stylesheet/profile_edit.css
@@ -147,7 +147,7 @@ a {
 
 	height: 25px;
 
-	background: url(./searchIcon.png) no-repeat;
+	background: url(../Image/searchIcon.png) no-repeat;
 
 	background-size: 100%;
 
@@ -321,7 +321,7 @@ a {
 
 	cursor: pointer;
 
-	opacity: 1;
+	opacity: 0.1;
 }
 
 #changeIcon:hover {
@@ -331,13 +331,13 @@ a {
 #userProfile {
 	display: block;
 	width: 100%;
-	margin-left: 30%;
+	margin-left: 32%;
 	margin-top: 50px;
 }
 
 .personInfoForm {
 	width: 600px;
-	height: 520px;
+	height: 540px;
 
 	border: hidden;
 
@@ -364,7 +364,7 @@ a {
 	font-weight: bolder;
 	font-size: 170%;
 	color: #778899;
-	margin-top: 15px;
+	padding-top: 20px;
 	margin-bottom: 35px;
 	text-align: center;
 }
@@ -379,7 +379,7 @@ a {
 
 	border: none;
 
-	background: url(./deleteIcon2.png) no-repeat;
+	background: url(../Image/deleteIcon2.png) no-repeat;
 
 	background-size: 100%;
 
@@ -412,7 +412,7 @@ a {
 .petsInfoForm {
 	width: 600px;
 
-	height: 620px;
+	height: 660px;
 
 	border: hidden;
 
@@ -427,6 +427,7 @@ a {
 
 #addPet {
 	position: relative;
+	margin-bottom: 10px;
 	cursor: pointer;
 	background-color: transparent;
 	border: none;
@@ -440,7 +441,7 @@ a {
 
 	height: 30px;
 
-	margin-right: 10px;
+	margin-right: 2px;
 
 	border-radius: 50%;
 
@@ -448,10 +449,10 @@ a {
 
 .addPetText {
 	position: absolute;
-	width: 125px;
+	width: 150px;
 	height: 10px;
 	top: 6px;
-	font-size: 120%;
+	font-size: 150%;
 	font-weight: bold;
 	color: #778899;
 }
@@ -496,10 +497,12 @@ a {
 
 	font-size: 20px;
 
-	color: white;
-
 	cursor: pointer;
 
+}
+
+#saveLink {
+	color: white;
 }
 
 
