update main page

--- a/view/MainPage.html
+++ b/view/MainPage.html
@@ -4,7 +4,7 @@
 	<title>Fluffy</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../stylesheet/index.css">
-	<link rel="stylesheet" type="text/css" href="../stylesheet/MainPage.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheet/mainPage.css">
 	<link rel="stylesheet" type="text/css" href="../stylesheet/postModal.css">
 </head>
 
