--- a/stylesheet/MainPage.css
+++ b/stylesheet/MainPage.css
@@ -24,7 +24,7 @@ body{
 .UserPostButtonDiv{
 	color: #9b9696;
 	background-color: #ffd86a;
-	border-radius: 45%;
+	border-radius: 45px;
 	text-align: center;
 	font-size: 250%;
 	width: 150px;
