--- a/stylesheet/MainPage.css
+++ b/stylesheet/MainPage.css
@@ -1,43 +1,23 @@
 /**{
 	border: 1px solid black;
 }*/
-
-
-body{
-	margin-top: 0px;
-	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-}
-
-
-#HeaderText, .UserPostButtonDiv{
-	display: inline-block;
+img{
+	object-fit: cover;
 }
 
 /* Application background color */
 #FluffyApplication{
-	margin-left: 5vw;
-	margin-right: 5vw;
 	background-color: #f8f8f8;
 }
 
 /* User Post Button */
-.UserPostButtonDiv{
+#newPostButtonDiv{
 	color: #9b9696;
 	background-color: #ffd86a;
 	border-radius: 45px;
 	text-align: center;
 	font-size: 250%;
 	width: 150px;
-}
-
-
-/* Search Bar */
-#UserSearchButton{
-	float: right;
-
-	margin-right: 8%;
-	margin-top: 20px;
-	height: 45px;
 }
 
 #UserSearchButton input{
