--- a/stylesheet/postModal.css
+++ b/stylesheet/postModal.css
@@ -1,14 +1,4 @@
-.rounded .rounded-left{
-	border-radius: 45px;
-	display: inline-block;
-}
-
-.rounded .rounded-right{
-	border-radius: 45%;
-	display: inline-block;
-}
-
-#MakePostModal{
+#PostModal{
 	display: none;
 	position: fixed;
 	z-index: 100;
@@ -20,7 +10,7 @@
 	background-color: rgba(0,0,0,0.7);
 }
 
-#MakePostModal-Container{
+#PostModal-Container{
 	height: 45vh;
 	width: 45vw;
 
@@ -34,14 +24,14 @@
 	overflow: hidden;
 }
 
-#MakePostModal-Picture{
+#PostModal-Picture{
 	height: 70%;
 	background-color: #bdbec0;
 	border: 1px solid #9e9e9e;
 	border-radius: 2.5%;
 }
 
-#MakePostModal-Picture .AddFilePic{
+#PostModal-Picture .AddFilePic{
 	/*height: 25%;
 	position: relative;
 	top: 37.5%;
@@ -49,19 +39,19 @@
 	margin: auto;
 }
 
-#MakePostModal-PostTitle{
+#PostModal-SubmitPostTitle{
 	margin-top: 2.5%;
 	height: 10%;
 }
 
-#MakePostModal-PostTitle .circle{
+#PostModal-SubmitPostTitle .circle{
 	display: inline-block;
 	height: 100%;
 	margin-left: 40px;
 }
 
 
-#MakePostModal-PostTitle input{
+#PostModal-SubmitPostTitle input{
 	position: relative;
 	bottom: 35%;
 	margin-left: 10px;
@@ -73,7 +63,7 @@
 	border-radius: 5%;
 }
 
-#MakePostModal-Container .UserPostButtonDiv{
+#PostModal-Container .UserPostButtonDiv{
 	margin-top: 2%;
 	margin-left: 35%;
 	background-color: #bdbec0;
