--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -131,17 +131,7 @@ body {
 }
 
 /* Modal */
-.rounded .rounded-left{
-	border-radius: 45%;
-	display: inline-block;
-}
-
-.rounded .rounded-right{
-	border-radius: 45%;
-	display: inline-block;
-}
-
-#MakePostModal{
+#PostModal{
 	display: none;
 	position: fixed;
 	z-index: 100;
@@ -153,7 +143,7 @@ body {
 	background-color: rgba(0,0,0,0.7);
 }
 
-#MakePostModal-Container{
+#PostModal-Form{
 	height: 45vh;
 	width: 45vw;
 
@@ -167,14 +157,14 @@ body {
 	overflow: hidden;
 }
 
-#MakePostModal-Picture{
+#PostModal-Picture{
 	height: 70%;
 	background-color: #bdbec0;
 	border: 1px solid #9e9e9e;
 	border-radius: 2.5%;
 }
 
-#MakePostModal-Picture .AddFilePic{
+#PostModal-Picture .AddFilePic{
 	/*height: 25%;
 	position: relative;
 	top: 37.5%;
@@ -182,19 +172,19 @@ body {
 	margin: auto;
 }
 
-#MakePostModal-PostTitle{
+#PostModal-PostTitle{
 	margin-top: 2.5%;
 	height: 10%;
 }
 
-#MakePostModal-PostTitle .circle{
+#PostModal-PostTitle .circle{
 	display: inline-block;
 	height: 100%;
 	margin-left: 40px;
 }
 
 
-#MakePostModal-PostTitle input{
+#PostModal-PostTitle input{
 	position: relative;
 	bottom: 35%;
 	margin-left: 10px;
@@ -203,18 +193,15 @@ body {
 	width: 70%;
 
 	border-width: 0px;
-	border-radius: 5%;
+	border-radius: 45px;
 }
 
-#MakePostModal-Container .UserPostButtonDiv{
+#PostModal-SubmitPost{
 	margin-top: 2%;
 	margin-left: 35%;
 	background-color: #bdbec0;
 	color: white;
 	font-weight: bold;
 }
-
-
-
 
 
