update userpage posting manager

--- a/view/MainPage.html
+++ b/view/MainPage.html
@@ -67,51 +67,80 @@
 			</div>
 		</div>
 
-		<div id="UserPostings">
-			<table id="UserPostingsTable">
-				<tbody>
-					<tr>
-						<td class="Posting">
-							<div class="PostingImage">
-								<img src="../Image/samplePost1.jpg">
-							</div>
-							<div class="PostingTitle">miamiamia</div>
-						</td>
-						<td class="Posting">
-							<div class="PostingImage">
-								<img src="../Image/samplePost2.jpg">
-							</div>
-							<div class="PostingTitle">Posting 2</div>
-						</td>
-						<td class="Posting">
-							<div class="PostingImage">
-								<img src="../Image/samplePost3.jpg">
-							</div>
-							<div class="PostingTitle">Posting 3</div>
-						</td>
-						<td class="Posting">
-							<div class="PostingImage">
-								<img src="../Image/samplePost4.jpg">
-							</div>
-							<div class="PostingTitle">Posting 4</div>
-						</td>
-					</tr>
+		<div class="postContainer">
+			<div class="row">
+				<!-- Post Colomn -->
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost1.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
 
-					<tr>
-						<td class="Posting">
-							<div class="PostingImage">
-								<img src="../Image/samplePost5.jpg">
-							</div>
-							<div class="PostingTitle">Posting 5</div>
-						</td>
-					</tr>
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost2.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost3.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost4.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
+			</div>
 
-				</tbody>
-			</table>
+			<div class="row">
+				<!-- Post Colomn -->
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost5.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="column">
+					<div class="post">
+						<div class="postImageContainer">
+							<img class="postImage" src="../Image/samplePost6.jpg">
+						</div>
+						<div class="postTextContainer">
+							<span class="postText">miamiamia</span>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+
 		</div>
-	</div>
 
-	<img src="../Image/sampleModal.jpg">
 	<div id="Fluffy footer"></div>
 
 
