--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,6 +1,6 @@
 /* font */
 body {
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 }
 
 /* nav bar */
@@ -74,60 +74,60 @@ body {
 
 /* Post */
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+	content: "";
+	display: table;
+	clear: both;
 
 }
 
 .postContainer {
-    margin-top: 120px;
-    margin-left: 20px;
-    margin-right: 20px;
-    display: block;
+	margin-top: 120px;
+	margin-left: 20px;
+	margin-right: 20px;
+	display: block;
 }
 
 .column {
-    float: left;
-    width: 25%;
+	float: left;
+	width: 25%;
 }
 
 .post {
-    height: 100px;
-    margin-right: 10px;
-    margin-left: 10px;
-    /* padding-top: 75%; */
-    padding-bottom: 75%;
-    position: relative;
-    box-shadow: 2px 2px 2px lightgray;
+	height: 100px;
+	margin-right: 10px;
+	margin-left: 10px;
+	/* padding-top: 75%; */
+	padding-bottom: 75%;
+	position: relative;
+	box-shadow: 2px 2px 2px lightgray;
 }
 
 .postImageContainer {
-    margin-top: 0px;
-    width: 100%;
-    height: 60%;
+	margin-top: 0px;
+	width: 100%;
+	height: 60%;
 }
 
 .postImage {
-    width: 100%;
-    height: 60%;
-    margin-top: 0px;
-    object-fit: cover;
-    position: absolute;
+	width: 100%;
+	height: 60%;
+	margin-top: 0px;
+	object-fit: cover;
+	position: absolute;
 }
 
 .postTextContainer {
-    width: 100%;
-    height: 40%;
-    margin-top: 60%;
-    position: relative;
-    margin-left: 10px;
-    margin-right: 10px;
+	width: 100%;
+	height: 40%;
+	margin-top: 60%;
+	position: relative;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .postText {
-    font-size: 13px;
-    color: #25374f;
+	font-size: 13px;
+	color: #25374f;
 }
 
 /* Modal */
@@ -158,6 +158,7 @@ body {
 }
 
 #PostModal-Picture{
+	overflow: hidden;
 	height: 70%;
 	background-color: #bdbec0;
 	border: 1px solid #9e9e9e;
@@ -165,13 +166,13 @@ body {
 }
 
 #PostModal-Picture .AddFilePic{
-	/*height: 25%;
-	position: relative;
-	top: 37.5%;
-	left: 37.5%;*/
-	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 
+#PostModal-ImgFileSelector{
+	display: none;
+}
 #PostModal-PostTitle{
 	margin-top: 2.5%;
 	height: 10%;
