update mainpage post modal

--- a/view/MainPage.html
+++ b/view/MainPage.html
@@ -13,13 +13,13 @@
 		<form id="PostModal-Form">
 			<!-- Picture section of post modal-->
 			<div id="PostModal-Picture">
-				<img class="AddFilePic" src="../Image/postModalAddPic.png">
+				<img class="AddFilePic" src="../Image/postModalAddPic.png" accept="image/*" />
 				<input id="PostModal-ImgFileSelector" type="file" name="">
 			</div>
 			<!-- Title section of post modal-->
 			<div id="PostModal-PostTitle">
 				<img class="circle" src="../Image/postModalSearchCircle.png">
-				<input type="text" name="postTitle" placeholder="Write something...">
+				<input class = "PostModal-PostTitleText" type="text" name="postTitle" placeholder="Write something...">
 			</div>
 			<!-- Comment section of post modal-->
 			<div id="PostModal-Comment"></div>
